--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,11 @@
 {
-    "env": {
-        "es6": true,
-        "browser": true
-    },
     "extends": [
-        "eslint:recommended"
+        "plugin:prettier/recommended"
     ],
+
+    "plugins": ["prettier"],
+
     "rules": {
-        "quotes": ["error", "single"]
+        "prettier/prettier": "error"
     }
 }
